# catchrobo2023_ros_ws

./: CMakeLists.txt  clionsource.sh  package.xml
launch/: main.launch.py
src/: inverse_kinematics_node.cpp  robot_kinematics.cpp
src/inverse_kinematics/: CMakeLists.txt  package.xml
src/inverse_kinematics/include/inverse_kinematics/: robot_kinematics.h  visibility_control.h
src/inverse_kinematics/include/ros2_inverse_kinematics/: posrot_vector.h  robot_kinematics.h
src/inverse_kinematics/src/: inverse_kinematics_node.cpp  posrot_vector.h  robot_kinematics.cpp  robot_kinematics.h
src/main_node/: CMakeLists.txt  package.xml
src/main_node/include/main_node/: main_node.hpp
src/main_node/launch/: main_node.launch.py
src/main_node/src/: main_node.cpp
src/socketcan_interface/: CMakeLists.txt
src/socketcan_interface/src/: socketcan_node.cpp
src/tcp_interface/: CMakeLists.txt
src/tcp_interface/include/tcp_interface/: tcp_node.hpp
src/tcp_interface/src/: tcp_node.cpp
test/: main.cpp  robot_kinematics.cpp
test/include/: robot_kinematics.h
